simple-web-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
        - name: simple-web-app
          image: trialz0d1xq.jfrog.io/docker-example-docker/simple-web-app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: jfrog-regcred
