simple-web-app-pod-with-jfrog.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-web-app-pod
  namespace: kube
spec:
  containers:
    - name: simple-web-app-container
      image: trialz0d1xq.jfrog.io/docker-example-docker-local/simple-web-app:latest
      ports:
        - containerPort: 8080
  imagePullSecrets:
    - name: jfrog-regcred
