simple-web-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
spec:
  selector:
    app: simple-web-app # Must match the pod labels
  type: ClusterIP # Change this to NodePort or LoadBalancer as needed
  ports:
    - port: 80 # Port exposed by the service
      targetPort: 80 # Port on the container
